Split on separated classes.

--- a/src/scss/jquery-jsonform.scss
+++ b/src/scss/jquery-jsonform.scss
@@ -4,49 +4,31 @@ html {
 
         //  Combo field
         .form-control-combo {
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-            cursor: pointer;
-        }
+            padding: 0;
+            border: none;
 
-        //  Dynamic dropdown list
-        .combobox {
-            position: absolute;
-            z-index: 999;
+            //  Select2 container
+            > .select2 {
+                height: 100%;
+                padding: 0;
 
-            .combobox-content-wrap {
-                position: relative;
-                display: block;
-                background-color: #fff;
-                border: 1px solid #ccc;
-            }
+                > .selection {
+                    display: block;
+                    height: 100%;
 
-            .combobox-search {
-                position: absolute;
-                width: 100%;
-                height: 55px;
-                padding: 10px;
-                background-color: #fff;
-            }
-
-            .combobox-content {
-                max-height: 200px;
-                margin-bottom: 55px;
-                overflow: auto;
-
-                .combobox-item {
-                    padding: 10px;
-                    cursor: pointer;
-
-                    &:hover {
-                        background-color: #ddd;
-
+                    > .select2-selection {
+                        height: 100%;
+                        border-radius: 0;
+                        border-color: #d2d6de;
                     }
                 }
-
             }
+        }
+
+        //  Select2 dropdown
+        .jquery-jsonform-combo-dropdown {
+            border-radius: 0;
+            border-color: #d2d6de;
         }
     }
 
